# pycharm-mcp-server

./: .gitignore  LICENSE  README.md
pycharm-mcp/: README.md  pyproject.toml
pycharm-mcp/src/pycharm_mcp/: __init__.py  client.py  models.py  server.py
pycharm-mcp/src/pycharm_mcp/tools/: __init__.py  delete.py  extract.py  find.py  inline.py  move.py  projects.py  rename.py  signature.py
pycharm-mcp/tests/: __init__.py  test_client.py
pycharm-refactoring-bridge/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
pycharm-refactoring-bridge/src/main/kotlin/com/github/pycharm/refactoring/: RefactoringBridgePlugin.kt
pycharm-refactoring-bridge/src/main/kotlin/com/github/pycharm/refactoring/refactoring/: ExtractService.kt  FindUsagesService.kt  InlineService.kt  MoveService.kt  RenameService.kt  SafeDeleteService.kt  SignatureService.kt
pycharm-refactoring-bridge/src/main/kotlin/com/github/pycharm/refactoring/server/: HttpServer.kt  RefactoringController.kt
pycharm-refactoring-bridge/src/main/kotlin/com/github/pycharm/refactoring/server/models/: Models.kt
pycharm-refactoring-bridge/src/main/kotlin/com/github/pycharm/refactoring/settings/: RefactoringBridgeConfigurable.kt  RefactoringBridgeSettings.kt
pycharm-refactoring-bridge/src/main/kotlin/com/github/pycharm/refactoring/util/: ProjectUtils.kt  PsiUtils.kt
