[project]
name = "pycharm-mcp"
version = "0.1.0"
description = "MCP server that exposes PyCharm's refactoring capabilities to Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "hajarada", email = "hajarada@cisco.com" }
]
keywords = ["mcp", "pycharm", "refactoring", "claude", "ide"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "respx>=0.21.0",
]

[project.scripts]
pycharm-mcp = "pycharm_mcp.server:main"

[project.urls]
Homepage = "https://github.com/hajarada/pycharm-mcp-server"
Repository = "https://github.com/hajarada/pycharm-mcp-server"
Issues = "https://github.com/hajarada/pycharm-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycharm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]